--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"host": "Enter your server ip or url",
-	"port": "Enter your server port",
+	"host": "game2.falixserver.net",
+	"port": "27493",
 	"username": "Enter the AFKBot's username you want (Whatever doesn't matter)",
 	"logger": [ true
 		, "true : displays not necessary logs. (ex: key input logs)",
